--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
 Flask-Mail==0.9.1
 Flask-WTF==1.2.1
+Flask-Babel==4.0.0
 WTForms==3.1.1
 email-validator==2.1.0
 bcrypt==4.1.2
